2007-08-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/waterfall.py (WaterfallStatusResource.buildGrid):
	add a query arg of 'show_events=true' to display non-build events,
	like slaves attaching/detaching and reconfig events, or
	'show_events=false' to hide them. The default is 'true'.
	* docs/buildbot.texinfo (Buildbot Web Resources): document it

	* web-parts: merge in web-parts branch. Lots of changes. The new
	functionality is to add buildbot.status.html.WebStatus, which is a
	superset of the Waterfall that adds new status pages and serves
	regular files from BASEDIR/public_html/ , which is now the preferred
	place to put robots.txt, buildbot.css, and index.html .
	* buildbot/scripts/runner.py: the 'create-master' command now
	creates public_html/ too, and populates it with a couple of
	static files.
	* buildbot/status/web: split waterfall code into smaller pieces

2007-07-31  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/startup.py (launch): import twistd.run in a
	different way to hush pyflakes
	* buildbot/process/builder.py: remove unused import

2007-07-30  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (ISourceStamp): cleanup patch by Dustin
	Mitchell: pass SourceStamps around rather than branch/version/etc
	tuples. Thanks Dustin! Closes #70.
	* buildbot/sourcestamp.py (SourceStamp): insist that .changes is a
	tuple rather than a list, to avoid surprising mutations
	* buildbot/process/builder.py (BuilderControl.resubmitBuild): same
	* buildbot/status/mail.py (MailNotifier.buildMessage): same
	* buildbot/status/builder.py (BuildStatus.getSourceStamp): same
	* buildbot/test/test_status.py (Subscription): same
	* buildbot/test/test_control.py (Force): same
	* buildbot/test/test_buildreq.py (Request.testMerge): same

2007-07-29  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: remove the spurious 'builders'
	variable, since it wasn't used and is confusing in the presence of